--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,6 +5,5 @@ services:
       context: .
       dockerfile: Dockerfile
     environment:
-      - TOKEN=${TOKEN}
-      - GAME_URL=${GAME_URL}
+      - BOT_TOKEN=${TOKEN}
       - GAME_NAME=${GAME_NAME}
